とりあえず完成

--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -5,38 +5,18 @@
   </div>
 </a>
 
-    <nav class="site-header sticky-top py-1">
-  <div class="container d-flex flex-column flex-md-row justify-content-between">
-    <a class="py-2" href="/">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
-    </a>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Tour</a> -->
-    
-    <%= link_to("新規登録","/users/new", {class: "py-2 d-none d-md-inline-block"}) %>
    
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Product</a> -->
-    <%= link_to("ログイン","/users/login_page" , {class: "py-2 d-none d-md-inline-block"}) %>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Features</a> -->
-    <a class="py-2 d-none d-md-inline-block" href="#">特徴</a>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a> -->
-    <a class="py-2 d-none d-md-inline-block" href="#">エンタープライズ</a>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Support</a> -->
-    <a class="py-2 d-none d-md-inline-block" href="#">サポート</a>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a> -->
-    <a class="py-2 d-none d-md-inline-block" href="#">価格</a>
-    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Cart</a> -->
-    <a class="py-2 d-none d-md-inline-block" href="#">カート</a>
-  </div>
-</nav>
 
 <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
   <div class="col-md-5 p-lg-5 mx-auto my-5">
     <!-- <h1 class="display-4 font-weight-normal">Punny headline</h1> -->
-    <h1 class="display-4 font-weight-normal">ヘッドライン</h1>
+    <h1 class="display-4 font-weight-normal">ツイッター！</h1>
     <!-- <p class="lead font-weight-normal">And an even wittier subheading to boot. Jumpstart your marketing efforts with this example based on Apples marketing pages.</p> -->
-    <p class="lead font-weight-normal">いい感じのサブヘッダー. この Apple の製品ページをベースにしたテンプレートでマーケティングを始めましょう.</p>
+    <p class="lead font-weight-normal">遠くにいる他の人と繋がろう！</p>
     <!-- <a class="btn btn-outline-secondary" href="#">Coming soon</a> -->
-    <a class="btn btn-outline-secondary" href="#">もうすぐ発売</a>
+    <div class="btn btn-outline-secondary">
+    <%= link_to('始める','/users/new') %>
+    </div>
   </div>
   <div class="product-device shadow-sm d-none d-md-block"></div>
   <div class="product-device product-device-2 shadow-sm d-none d-md-block"></div>
