--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,9 +15,40 @@
   </head>
 
   <body>
-  <% flash.each do |message| %>
-      <%= message %>
+  <header>
+   <nav class="site-header sticky-top py-1">
+  <div class="container d-flex flex-column flex-md-row justify-content-between">
+    <a class="py-2" href="/">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="d-block mx-auto"><circle cx="12" cy="12" r="10"></circle><line x1="14.31" y1="8" x2="20.05" y2="17.94"></line><line x1="9.69" y1="8" x2="21.17" y2="8"></line><line x1="7.38" y1="12" x2="13.12" y2="2.06"></line><line x1="9.69" y1="16" x2="3.95" y2="6.06"></line><line x1="14.31" y1="16" x2="2.83" y2="16"></line><line x1="16.62" y1="12" x2="10.88" y2="21.94"></line></svg>
+    </a>
+    
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Tour</a> -->
+    <% if session[:user_id]==0 %>
+    <%= link_to("新規登録","/users/new", {class: "py-2 d-none d-md-inline-block"}) %>
+   
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Product</a> -->
+    <%= link_to("ログイン","/users/login_page" , {class: "py-2 d-none d-md-inline-block"}) %>
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a> -->
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Support</a> -->
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a> -->
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Cart</a> -->
+    <% else %>
+    <%= link_to("ログアウト","/users/#{session[:user_id]}/logout" , method: :post  , class: "py-2 d-none d-md-inline-block") %>
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Features</a> -->
+    <%= link_to("マイページ","/users/#{session[:user_id]}/show" , {class: "py-2 d-none d-md-inline-block"}) %>
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a> -->
+    <%= link_to("ホーム","/users/#{session[:user_id]}/home" , {class: "py-2 d-none d-md-inline-block"}) %>    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Support</a> -->
+    
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a> -->
+    <!-- <a class="py-2 d-none d-md-inline-block" href="#">Cart</a> -->
     <% end %>
+  </div>
+</nav>
+</header>
+  <% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %> text-center m-2"><%= message %></div>
+  <% end %>
+
   
     <%= yield %>
   </body>
