--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,57 @@
-<h1>マイページ</h1>
+<div class="row pt-5">
+  <div class="col-xl-6 mx-auto text-center">
+    <div class="section-title mb-100">
+      <p class="pt-5">ご機嫌はいかがですか</p>
+      <h4><%= @user.name %>様</h4>
+    </div>
+  </div>
+</div>
+
+<div class="container">
+  <div class="row">
+    <div class="col-md-3 ">
+
+      <div class="list-group ">
+        <a href="#" class="list-group-item list-group-item-action active">ダッシュボード</a>
+        <div class="list-group-item list-group-item-action">
+        <%= link_to('ユーザー編集',"/users/#{@user.id}/edit") %>
+        </div>
+        <div class="list-group-item list-group-item-action">
+        <%= link_to('あなたの投稿',"/posts/#{@user.id}/index") %>
+        </div>
+        <div class="list-group-item list-group-item-action">
+        <%= link_to('新しい投稿',"/posts/#{@user.id}/new") %>
+        </div>
+        <div class="list-group-item list-group-item-action">
+        <%= link_to('フォロー一覧',"/users/#{@user.id}/follow_index") %>
+        </div>
+        <div class="list-group-item list-group-item-action">
+        <%= link_to('ユーザー一覧',"/users/index") %>
+        </div>
+        <a href="#" class="list-group-item list-group-item-action">Post</a>
+        <a href="#" class="list-group-item list-group-item-action">Category</a>
+        <a href="#" class="list-group-item list-group-item-action">New</a>
+        <a href="#" class="list-group-item list-group-item-action">Comments</a>
+        <a href="#" class="list-group-item list-group-item-action">Appearance</a>
+        <a href="#" class="list-group-item list-group-item-action">Reports</a>
+        <a href="#" class="list-group-item list-group-item-action">設定</a>
+
+      </div>
+    </div>
+
+    <!-- 以下は後々修正 -->
+
+    <!-- <div class="col-md-9"> <div class="card"> <div class="card-body"> <div class="row"> <div class="col-md-12"> <h4>Your Profile</h4> <hr> </div> </div> <div class="row"> <div class="col-md-12"> <form> <div class="form-group row"> <label
+    for="username" class="col-4 col-form-label">User Name*</label> <div class="col-8"> <input id="username" name="username" placeholder="Username" class="form-control here" required="required" type="text"> </div> </div> <div class="form-group row">
+    <label for="name" class="col-4 col-form-label">First Name</label> <div class="col-8"> <input id="name" name="name" placeholder="First Name" class="form-control here" type="text"> </div> </div> <div class="form-group row"> <label for="lastname"
+    class="col-4 col-form-label">Last Name</label> <div class="col-8"> <input id="lastname" name="lastname" placeholder="Last Name" class="form-control here" type="text"> </div> </div> <div class="form-group row"> <label for="text" class="col-4
+    col-form-label">Nick Name*</label> <div class="col-8"> <input id="text" name="text" placeholder="Nick Name" class="form-control here" required="required" type="text"> </div> </div> <div class="form-group row"> <label for="select" class="col-4
+    col-form-label">Display Name public as</label> <div class="col-8"> <select id="select" name="select" class="custom-select"> <option value="admin">Admin</option> </select> </div> </div> <div class="form-group row"> <label for="email" class="col-4
+    col-form-label">Email*</label> <div class="col-8"> <input id="email" name="email" placeholder="Email" class="form-control here" required="required" type="text"> </div> </div> <div class="form-group row"> <label for="website" class="col-4
+    col-form-label">Website</label> <div class="col-8"> <input id="website" name="website" placeholder="website" class="form-control here" type="text"> </div> </div> <div class="form-group row"> <label for="publicinfo" class="col-4 col-form-label">Public
+    Info</label> <div class="col-8"> <textarea id="publicinfo" name="publicinfo" cols="40" rows="4" class="form-control"></textarea> </div> </div> <div class="form-group row"> <label for="newpass" class="col-4 col-form-label">New Password</label> <div
+    class="col-8"> <input id="newpass" name="newpass" placeholder="New Password" class="form-control here" type="text"> </div> </div> <div class="form-group row"> <div class="offset-4 col-8"> <button name="submit" type="submit" class="btn
+    btn-primary">Update My Profile</button> </div> </div> </form> </div> </div> </div> </div> </div> -->
+
+  </div>
+</div>
